# universal-bluetooth-driver

./: Cargo.toml  LICENSE  README.md
src/: driver_db.rs  error.rs  main.rs  service.rs
src/bluetooth/: manager.rs  mod.rs
src/ui/: mod.rs  views.rs
