[package]
name = "universal_bluetooth_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.5", features = ["wgpu"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
windows = { version = "0.48", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Foundation_Collections",
    "Foundation",
    "Storage_Streams",
] }
reqwest = { version = "0.11", features = ["stream"] }
ring = "0.16"
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.8"